fixed inline-block overlap

--- a/scss/abstracts/_functions.scss
+++ b/scss/abstracts/_functions.scss
@@ -13,3 +13,15 @@ $browser-context: 16;
 
 	@return math.div($pixels, $context) * 1em;
 }
+
+@function rem($pixels, $context: $browser-context) {
+	@if (unitless($pixels)) {
+		$pixels: $pixels * 1px;
+	}
+
+	@if (unitless($context)) {
+		$context: $context * 1px;
+	}
+
+	@return math.div($pixels, $context) * 1rem;
+}
